Add Dockerfile and springboot service to docker-compose

--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,7 @@
 				</configuration>
 			</plugin>
 		</plugins>
+		<finalName>springboot-mongo-docker</finalName>
 	</build>
 	<repositories>
 		<repository>
