--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -20,6 +20,13 @@ services:
       - ME_CONFIG_MONGODB_ADMINUSERNAME=rootuser
       - ME_CONFIG_MONGODB_ADMINPASSWORD=rootpass
       - ME_CONFIG_MONGODB_SERVER=mongodb
+  springboot-mongodb:
+    image: springboot-mongodb:1.0
+    container_name: springboot-mongodb
+    ports:
+      - 8080:8080
+    depends_on:
+      - mongodb
 volumes:
   data: {}
 
