--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,6 @@ spring.data.mongodb.username=rootuser
 spring.data.mongodb.password=rootpass
 spring.data.mongodb.database=lab
 spring.data.mongodb.port=27017
-spring.data.mongodb.host=localhost
+spring.data.mongodb.host=mongodb
 spring.data.mongodb.auto-index-creation=true
 
